vmservice/4-vmservice-centos-netpol-denyall.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-permit-c
spec:
  podSelector: 
   matchLabels:
     web: demo
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - {}
