vmservice/6-vmservice-centos-netpol-permit-label.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-permit-c
spec:
  podSelector: 
   matchLabels:
     web: demo
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - {}
